--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- ===== BOX ICONS ===== -->
         
 
-        <title>Responsive Ecommerce Website Sneakers</title>
+        <title>Responsive Ecommerce Website Florence Cosmetics</title>
     </head>
     <body>
 
